# dwave-samplers

./: .appveyor.yml  .coveragerc  .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  meson.build  meson.options  pyproject.toml  requirements.txt  scrap.py  scratch.py  setup.cfg  setup.py
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
benchmarks/: README.md  asv.conf.json  benchmark_sa_reads.py  requirements.txt
benchmarks/benchmarks/: descent.py  sampler.py
benchmarks/results/: sa_reads_benchmark.csv
c/: CMakeLists.txt  errors.h  example.cc  helper.h  interface.cc  interface.h  mempool.cc  mempool.h
cmake-modules/: FindMATLAB.cmake  python.cmake
docs/: Makefile  api_ref.rst  conf.py  index.rst  intro.rst  reference.rst  release_notes.rst  requirements.txt  sa_backend_parallelization.rst  sdk_index.rst
docs/reference/: composites.rst  higherorder.rst  index.rst  sampler.rst
docs/reference/greedy/: README.rst  index.rst  samplers.rst
dwave/: __init__.py
dwave/samplers/: __init__.py  stopwatch.py  test.pyx
dwave/samplers/_build/: _version.py
dwave/samplers/greedy/: composite.py  decl.pxd  descent.cpp  descent.pyx  sampler.py
dwave/samplers/neal/: __init__.py  sampler.py  simulated_annealing.pyx
dwave/samplers/orang/: __init__.py  sample.cpp  sample.pyx  samplers.py  solve.cpp  solve.pyx
dwave/samplers/planar/: README.rst  __init__.py  kasteleyn.py  package_info.py  partition.py  planar.py  sampler.py  transforms.py  util.py
dwave/samplers/random/: cyrandom.pyx  sampler.py
dwave/samplers/sa/: sampler.py  simulated_annealing.pyx
greedy/: __init__.py  composite.py  decl.pxd  descent.pyx  package_info.py  sampler.py
greedy/src/: descent.cpp  descent.h
legacy/greedy/: requirements.txt  setup.cfg  setup.py
legacy/greedy/benchmarks/: requirements.txt
legacy/greedy/greedy/: descent.pyx  sampler.py
legacy/greedy/greedy/src/: descent.h
legacy/greedy/tests/: test_composite.py  test_descent.cpp  test_package_info.py
legacy/orang/: README.rst  requirements.txt  setup.py
legacy_tests/data/: FrustTriangleL21_OpenOpen.tsv  FrustTriangleL39_OpenOpen.tsv  FrustTriangleL3_OpenOpen.tsv
legacy_tests/unit/: test_agreement_ising.py  test_planar_graphs.py  test_sampler.py
matlab/: CMakeLists.txt  adjacencyTables.m  buildOrang.m  chimeraVarOrder.m  fattreeVarOrder.m  isingTables.m  orang_greedyvarorder.cpp  orang_greedyvarorder.m  orang_mex.cpp  orang_mex.h  orang_mincount.cpp  orang_mincount.m  orang_minsum.cpp  orang_minsum.m  orang_sample.cpp  orang_sample.m  quboTables.m
orang/: __init__.py  _poly.pyx  conversions.pxd  conversions.pyx  higherorder.py  orang.pxd  orang.pyx  package_info.py  poly.py  poly.pyx  sample.pyx  samplers.py  solve.pyx  tables.pyx
orang/src/: conversions.cpp  sample.cpp  solve.cpp
python/: CMakeLists.txt  build_egg.py  conversions.cpp  conversions.h  orang.i  python-api.h  sample.cpp  solve.cpp
releasenotes/notes/: 0-sweeps-neal-c15e16e6a9891bfd.yaml  NumPy-2.0-2b5756ee0fcdac2f.yaml  annealed-importance-sampling-f7e70316d423c681.yaml  c++17-2aae929da36978dd.yaml  char-to-int8-7b757beabd32e29c.yaml  cython3-36beac915dba0ea1.yaml  delvewheel-1.4.0-4691c26f10360643.yaml  fix-SA-parameters-d114a63f7371fd7f.yaml  fix-planar-energy-40a782ed1a0c567b.yaml  greedy-timing-info-6f31a043394af45a.yaml  meson-b8191642b9f33828.yaml  neal-beta-schedule-be5daba20a874ea5.yaml  neal-timing-info-983910b57bfa5832.yaml  planar-67a711e1020b9f03.yaml  prelude-0cf8581017e54bd7.yaml  python3.11-7466141a81650beb.yaml  python3.12-1e39dd7f62fb5dbe.yaml  random-sampler-a5bacc2b7761222f.yaml  simulated-quantum-annealing-wrapper-069dcb87f9f24c68.yaml  tree-beta-7ed38417e8865e8e.yaml  variableMCMCupdates-3135053840ab84c3.yaml
savanna/: __init__.py  agreement_ising.py  partition.py  planar.py  planar_graphs.py  sampler.py  transforms.py
savanna/io/: dimod.py
src/: CMakeLists.txt
src/orang/: buckettree.h  graph.h  marginalizer.h  merger.h  orang.h  table.h  task.h  treedecomp.h  varorder.h
subprojects/: README.rst
test/: test-main.cpp  test-op-count.cpp  test-op-logsumprod.cpp  test-op-min.cpp  test-varorder.cpp  util.cpp
tests/: __init__.py  meson.build  requirements.txt  test_annealed_importance_sampling.py  test_composite.py  test_descent.cpp  test_descent.py  test_greedy.cpp  test_greedy_composite.py  test_greedy_sampler.py  test_io_dimod.py  test_kasteleyn.py  test_orang.py  test_package_info.py  test_partition.py  test_path_annealing.py  test_path_annealing_sampler.py  test_planar.py  test_planar_graphs.py  test_planar_kasteleyn.py  test_planar_partition.py  test_planar_partition.py.old  test_planar_planar.py  test_planar_sampler.py  test_planar_util.py  test_poly.py  test_random_sampler.py  test_rotor_annealing.py  test_rotor_annealing_sampler.py  test_sampler.py  test_simulated_annealing.py  test_simulated_annealing_sampler.py  test_simulated_quantum_annealing.py  test_solver.py  test_sqa_sampler.py  test_stopwatch.py  test_tables.py  test_tabu.py  test_tabu_bqp.cpp  test_tabu_sampler.py  (+4 more)
tests/cpp/: CMakeLists.txt  Makefile  test-buckettree.cpp  test-graph.cpp  test-main.cpp  test-merger.cpp  test-op-count.cpp  test-op-logsumprod.cpp  test-op-min.cpp  test-table.cpp  test-task.cpp  test-treedecomp.cpp  test-varorder.cpp  test.h  util.cpp
tests/cpp/_legacy/: README.rst  test-op-count.cpp  test-table.cpp  test-task.cpp  test-varorder.cpp
tests/cpp/tests/: test_greedy.cpp
tests/data/: FrustTriangleL6.tsv  README.rst  __init__.py
tests/greedy/: Makefile  __init__.py  test_descent.cpp  test_descent.py  test_sampler.py
tests/neal/: test_sampler.py  test_simulated_annealing.py
tests/orang/: test_orang.py  test_sampler.py  test_solver.py
tests/orang/cpp/: CMakeLists.txt  test-treedecomp.cpp
tests/unit/: test_agreement_ising.py  test_planar_graphs.py  test_sampler.py
testscpp/orang/: test-merger.cpp  test-op-min.cpp
timing/: limits.cpp  main.cpp  settings.cpp  settings.h  uai-parser.cpp  uai.h
(+89 files in other folders)
