option(
    'build-tests',
    type: 'feature',
    value: 'auto',
    description:
        'Whether to build the C++ tests.' +
        'When set to enabled, the tests are always built.' +
        'When set to disabled, the tests are never built.' +
        'When set to auto (default), the tests are built when buildtype != release.',
)
