[build-system]
requires = [
    "setuptools>=46.4.0",       # PEP-420 support, PEP-517/518 support, setup.cfg attr: support
    "wheel>=0.30.0",            # limited python api support
    "cython>=0.29.24,<3.0",
    'dimod==0.12.1',
    'numpy==1.19.0;python_version<"3.9"',  # C API for numpy.random
    'oldest-supported-numpy;python_version>="3.9"',
    'networkx==2.6.3',
    'scipy==1.7.3;python_version<"3.8"',
    'scipy==1.9.2;python_version>="3.8"',
]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["dwave/samplers"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
