[metadata]
name = dwave-greedy
version = attr: greedy.__version__
description = Ocean-compatible collection of greedy/brute-force solvers/samplers
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
license_file = LICENSE
copyright = 2019, D-Wave Systems Inc.
author = D-Wave Systems Inc.
author_email = tools@dwavesys.com
url = https://github.com/dwavesystems/dwave-greedy
project_urls =
    Documentation = https://docs.ocean.dwavesys.com/en/stable/docs_greedy/sdk_index.html
    Issue Tracker = https://github.com/dwavesystems/dwave-greedy/issues/
    Source Code = https://github.com/dwavesystems/dwave-greedy/
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = greedy
zip_safe = false
include_package_data = true
python_requires = >=3.6
install_requires =
    numpy>=1.16.0,<2.0.0
    dimod>=0.9.2,<0.10.0

# keep in sync with {tests,docs}/requirements.txt
[options.extras_require]
test =
    coverage
    codecov
    parameterized
    dwave-system>=1.0.0
docs =
    sphinx>=4.0.0,<5.0.0
    sphinx_rtd_theme
    recommonmark

[aliases]
dists = clean --all sdist bdist_wheel
