[metadata]
name = dwave-samplers
version = attr: dwave.samplers.__version__
description = Ocean-compatible collection of solvers/samplers
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
license_file = LICENSE
author = D-Wave Systems Inc.
author_email = tools@dwavesys.com
url = https://github.com/dwavesystems/dwave-samplers
project_urls =
    Documentation = https://docs.ocean.dwavesys.com/en/stable/docs_greedy/sdk_index.html
    Issue Tracker = https://github.com/dwavesystems/dwave-samplers/issues/
    Source Code = https://github.com/dwavesystems/dwave-samplers/
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    dwave
    dwave.samplers
    dwave.samplers.greedy
    dwave.samplers.planar
    dwave.samplers.random
    dwave.samplers.sa
    dwave.samplers.tabu
    dwave.samplers.tree
zip_safe = false
include_package_data = true
python_requires = >=3.7
install_requires =
    numpy>=1.19.0,<2.0.0
    dimod>=0.12.0,<0.13.0
    networkx>=2.4.0
