[metadata]
name = dwave-greedy
version = attr: greedy.__version__
description = Ocean-compatible collection of greedy/brute-force solvers/samplers
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
license_file = LICENSE
author = D-Wave Systems Inc.
author_email = tools@dwavesys.com
url = https://github.com/dwavesystems/dwave-greedy
project_urls =
    Documentation = https://docs.ocean.dwavesys.com/en/stable/docs_greedy/sdk_index.html
    Issue Tracker = https://github.com/dwavesystems/dwave-greedy/issues/
    Source Code = https://github.com/dwavesystems/dwave-greedy/
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = greedy
zip_safe = false
include_package_data = true
python_requires = >=3.7
install_requires =
    numpy>=1.17.3,<2.0.0
    dimod>=0.9.2,<0.13.0
    importlib-metadata>=1.0; python_version < "3.8"

[aliases]
dists = clean --all sdist bdist_wheel
